Enable Ada support

--- a/Makefile.in
+++ b/Makefile.in
@@ -178,7 +178,7 @@ stamps/build-gcc-linux-stage2: $(srcdir)/riscv-gcc $(addprefix stamps/build-glib
 		--with-system-zlib \
 		--enable-shared \
 		--enable-tls \
-		--enable-languages=c,c++,fortran \
+		--enable-languages=c,c++,fortran,ada \
 		--disable-libmudflap \
 		--disable-libssp \
 		--disable-libquadmath \
@@ -223,7 +223,7 @@ stamps/build-gcc-newlib: src/newlib-gcc stamps/build-binutils-newlib
 		--disable-shared \
 		--disable-threads \
 		--disable-tls \
-		--enable-languages=c,c++ \
+		--enable-languages=c,c++,ada \
 		--with-system-zlib \
 		--with-newlib \
 		--disable-libmudflap \
@@ -231,11 +231,14 @@ stamps/build-gcc-newlib: src/newlib-gcc stamps/build-binutils-newlib
 		--disable-libquadmath \
 		--disable-libgomp \
 		--disable-nls \
+		--disable-libada \
 		$(GCC_CHECKING_FLAGS) \
 		$(MULTILIB_FLAGS) \
 		$(WITH_ABI) \
 		$(WITH_ARCH)
 	$(MAKE) -C $(notdir $@) inhibit-libc=true
+	$(MAKE) -C $(notdir $@)/gcc cross-gnattools
+	$(MAKE) -C $(notdir $@)/gcc ada.all.cross
 	$(MAKE) -C $(notdir $@) install
 	mkdir -p $(dir $@) && touch $@
 
